--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,40 +1,49 @@
 <div class="flex w-full h-full items-center justify-center">
 
-<div class="register-container max-w-2xl w-full ">
-    <h2>Register</h2>
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<div class="max-w-[500px] shadow-md p-8 border w-full ">
+    <h2 class="font-bold text-4xl mb-8 text-center">Register</h2>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="flex flex-col">
   
-      <div>
-        <label for="email">Email</label>
-        <input id="email" type="email" formControlName="email" />
+      <div class="mb-8">
+        <p-float-label>
+          <label for="email">Email</label>
+          <input pInputText id="email" type="email" class="w-full" formControlName="email" />
+        </p-float-label>
+
         <div *ngIf="submitted && f['email'].errors">
-          <small *ngIf="f['email'].errors['required']">Email is required.</small>
-          <small *ngIf="f['email'].errors['email']">Invalid email format.</small>
+          <small *ngIf="f['email'].errors['required']" class="text-red-500">Email is required.</small>
+          <small *ngIf="f['email'].errors['email']" class="text-red-500">Invalid email format.</small>
         </div>
       </div>
   
-      <div>
-        <label for="password">Password</label>
-        <input id="password" type="password" formControlName="password" />
+      <div class="mb-8">
+        <p-float-label>
+          <label for="password">Password</label>
+          <input pInputText id="password" type="password" class="w-full" formControlName="password" />
+        </p-float-label>
+
         <div *ngIf="submitted && f['password'].errors">
-          <small *ngIf="f['password'].errors['required']">Password is required.</small>
-          <small *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters long.</small>
+          <small *ngIf="f['password'].errors['required']" class="text-red-500">Password is required.</small>
+          <small *ngIf="f['password'].errors['minlength']" class="text-red-500">Password must be at least 6 characters long.</small>
         </div>
       </div>
   
-      <div>
-        <label for="confirmPassword">Confirm Password</label>
-        <input id="confirmPassword" type="password" formControlName="confirmPassword" />
+      <div class="mb-8">
+        <p-float-label>
+          <label for="confirmPassword">Confirm Password</label>
+          <input pInputText id="confirmPassword" type="password" class="w-full" formControlName="confirmPassword" />
+        </p-float-label>
+
         <div *ngIf="submitted &&f['confirmPassword'].errors">
-          <small *ngIf="f['confirmPassword'].errors['required']">Confirm password is required.</small>
-          <small *ngIf="f['confirmPassword'].errors['mismatch']">Passwords do not match.</small>
+          <small *ngIf="f['confirmPassword'].errors['required']" class="text-red-500">Confirm password is required.</small>
+          <small *ngIf="f['confirmPassword'].errors['mismatch']" class="text-red-500">Passwords do not match.</small>
         </div>
       </div>
   
-      <button type="submit">Register</button>
+      <p-button type="submit" variant="outlined" severity="contrast" class="font-bold" styleClass="w-full">Sign Up</p-button>
     </form>
   
-    <div *ngIf="successMessage" class="success-message">
+    <div *ngIf="successMessage" class="text-green-500">
       {{ successMessage }}
     </div>
   </div>
