--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="flex items-center justify-center p-2 bg-slate-800 text-white text-xs">
+<footer class="flex items-center justify-center p-2 bg-black text-white text-xs">
     All rights reserved Track My Budget &copy; 2024
 </footer>
